<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ellipsize="end"
        android:hint="@string/first_name_hint"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ellipsize="end"
        android:hint="@string/last_name_hint"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ellipsize="end"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1" />

    <EditText
        android:id="@+id/age"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:ellipsize="end"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1" />

    <android.support.v7.widget.CardView
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:clickable="true"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </android.support.v7.widget.CardView>

</LinearLayout>